use multiple routing modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,7 @@
   <div class="col-lg-3">
     <ul>
       <li><a routerLink="/routing">Routing</a></li>
-      <li><a routerLink="/routing" [routerLinkActive]="''">Routing</a></li>
     </ul>
   </div>
-  <div class="col-lg-9">
-    <router-outlet></router-outlet>
-  </div>
+  <div class="col-lg-9"><router-outlet></router-outlet></div>
 </div>
